# TerraformDemo

./: .gitignore  CHANGELOG.md  Dockerfile  cargo.toml  index.html  nginx.conf
crates/api-contact/: CHANGELOG.md  Cargo.toml
crates/api-contact/src/: args.rs  main.rs
crates/api-contact/src/endpoints/: contact.rs  mod.rs
crates/app-demo/: Cargo.toml
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
terraform/apps/appdemo/: input.tf  modules.tf
terraform/modules/app-demo/: input.tf  modules.tf  providers.tf
terraform/modules/network/: input.tf  modules.tf  output.tf  providers.tf
terraform/modules/traefik/: input.tf  modules.tf  providers.tf
terraform/workspaces/appdemo-local/: modules.tf
terraform/workspaces/appdemo-prod/: modules.tf
