[package]
name = "proto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
lettre = { version = "0.11.11", features = ["serde", "builder", "tracing"], optional = true }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"], optional = true }
tracing = { version = "0.1.41", optional = true }
utoipa = { version = "5.3.0", features = ["chrono"] }

[features]
ssr = ["dep:tokio", "dep:lettre", "dep:tracing"]
csr = []
default = ["ssr"]
