[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
atty = "0.2.14"
axum = { version = "0.7.9", features = ["macros"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
lazy_static = "1.5.0"
prometheus = "0.13.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "tokio", "trace", "limit"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.0", features = ["axum_extras", "chrono"] }
